# vit-image-classifier

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: app.py
reports/: results.md
scripts/: download_data.py  push_to_hub.py  run_experiments.py
src/: __init__.py  config.py  evaluate.py  inference.py  scheduler.py  train.py
src/data/: __init__.py  dataset.py  transforms.py
src/models/: __init__.py  encoder_from_scratch.py  patch_embedding.py  vit.py
src/training/: __init__.py
tests/: test_config.py  test_dataset.py  test_evaluate.py  test_inference.py  test_patch_embedding.py  test_scheduler.py  test_train_smoke.py  test_transforms.py  test_vit.py
